--- a/css/style.css
+++ b/css/style.css
@@ -824,7 +824,7 @@ h6 {
 }
 
 .overlay.green {
-    background-color: #6449E7;
+    background-color: #f6891f;
 }
 
 .overlay.black {
@@ -1236,8 +1236,8 @@ ul.list-inline li {
     background: transparent;
     padding: 9px 15px;
     border-radius: 3px;
-    border: 1px solid #6449E7;
-    color: #6449E7 !important;
+    border: 1px solid #f6891f;
+    color: #f6891f !important;
     transition: 0.3s;
     display: inline-block;
     font-size: 15px;
@@ -1249,7 +1249,7 @@ ul.list-inline li {
 }
 
 .btn.v1:hover {
-    background: #6449E7;
+    background: #f6891f;
     color: #fff !important;
     border: 1px solid transparent;
 }
@@ -1294,8 +1294,8 @@ ul.list-inline li {
 
 .btn.v3:hover {
     background: #fff;
-    color: #6449E7 !important;
-    border: 1px solid #6449E7;
+    color: #f6891f !important;
+    border: 1px solid #f6891f;
 }
 
 .btn.v4 {
@@ -1329,7 +1329,7 @@ ul.list-inline li {
     text-transform: uppercase;
     line-height: 1.1;
     font-weight: 500;
-    background: #6449E7;
+    background: #f6891f;
     color: #fff;
     cursor: text !important;
 }
@@ -1352,13 +1352,13 @@ ul.list-inline li {
 
 .btn.v6:hover {
     background: #fff;
-    color: #6449e7 !important;
+    color: #f6891f !important;
     border: 1px solid transparent;
 
 }
 
 .btn.v7 {
-    background: #6449E7;
+    background: #f6891f;
     padding: 9px 20px;
     border-radius: 3px;
     border: 1px solid transparent;
@@ -1451,7 +1451,7 @@ ul.list-inline li {
 
 
 .social-buttons li a:hover i {
-    color: #6449e7 !important;
+    color: #f6891f !important;
 }
 
 
@@ -1473,7 +1473,7 @@ ul.list-inline li {
 }
 
 .social-buttons.style1 li a:hover {
-    border: 1px solid #6449e7;
+    border: 1px solid #f6891f;
 }
 
 .bg-cb {
@@ -1489,7 +1489,7 @@ ul.list-inline li {
 }
 
 .bg-blue {
-    background-color: #6449E7;
+    background-color: #f6891f;
 }
 
 .bg-orange {
@@ -1597,7 +1597,7 @@ ul.list-inline li {
 
 .header.transparent.scroll .site-navbar-wrap.v1 .user-btn span {
     background: #fff;
-    color: #6449e7;
+    color: #f6891f;
 }
 
 .header.transparent.scroll .site-navbar-wrap.v1 .btn.v6 {
@@ -1637,7 +1637,7 @@ ul.list-inline li {
 }
 
 .header.transparent.scroll .btn.v6:hover {
-    background-color: #6449e7;
+    background-color: #f6891f;
     color: #fff !important;
 }
 
@@ -1662,7 +1662,7 @@ ul.list-inline li {
 }
 
 .header-top-left ul li i {
-    color: #6449e7;
+    color: #f6891f;
     margin-right: 7px;
     font-size: 15px;
     top: 1px;
@@ -1803,7 +1803,7 @@ ul.list-inline li {
 }
 
 .site-menu>li>a::before {
-    background-color: #6449e7;
+    background-color: #f6891f;
     position: absolute;
     top: -20px;
     left: 0;
@@ -1814,7 +1814,7 @@ ul.list-inline li {
 }
 
 .site-menu>li>a.active::before {
-    background-color: #6449e7;
+    background-color: #f6891f;
     position: absolute;
     top: -20px;
     left: 0;
@@ -1833,7 +1833,7 @@ ul.list-inline li {
 }
 
 .site-navbar-wrap.v2 .site-menu>li::before {
-    background: #6449e7;
+    background: #f6891f;
 }
 
 .site-navbar .site-navigation .site-menu .active>a {
@@ -1846,7 +1846,7 @@ ul.list-inline li {
 }
 
 .user-menu li a {
-    background: #6449E7;
+    background: #f6891f;
     color: #fff !important;
     border-radius: 20px;
     transition: 0.4s;
@@ -1904,7 +1904,7 @@ ul.list-inline li {
     position: absolute;
     width: 18px;
     height: 18px;
-    background: #6449e7;
+    background: #f6891f;
     border-radius: 50%;
     text-align: center;
     line-height: 18px;
@@ -1915,7 +1915,7 @@ ul.list-inline li {
 }
 
 .user-btn li a i {
-    color: #6449e7;
+    color: #f6891f;
     font-size: 14px;
     font-weight: 700;
     transition: 0.5s;
@@ -1930,11 +1930,11 @@ ul.list-inline li {
 }
 
 .user-btn li a:hover {
-    border-color: #6449e7;
+    border-color: #f6891f;
 }
 
 .user-btn li a:hover i {
-    color: #6449e7;
+    color: #f6891f;
 }
 
 .user-btn.v2 li a:hover {
@@ -2909,7 +2909,7 @@ input[type="text"]:focus {
 }
 
 .custom-select.dropdown li a:active {
-    background-color: #6449e7;
+    background-color: #f6891f;
 }
 
 .custom-select.dropdown li a:active span {
@@ -2949,7 +2949,7 @@ input[type="text"]:focus {
 }
 
 .custom-select .dropdown-item.active {
-    background-color: #6449e7;
+    background-color: #f6891f;
 }
 
 .custom-select .dropdown-item.active span {
@@ -3058,11 +3058,11 @@ input[type="text"]:focus {
 
 .hero-category-content i {
     font-size: 35px;
-    color: #6449E7;
+    color: #f6891f;
 }
 
 .hero-category-content:hover {
-    background: #6449E7;
+    background: #f6891f;
 }
 
 .hero-category-content:hover i {
@@ -3150,7 +3150,7 @@ input[type="text"]:focus {
 
 .hero-catagory-content.v2:hover i,
 .hero-catagory-content.v2:hover .name {
-    color: #6449E7;
+    color: #f6891f;
 }
 
 .hero-category-content.v2 i,
@@ -3236,7 +3236,7 @@ input[type="text"]:focus {
 }
 
 .category-section .overlay {
-    background: #6449e7;
+    background: #f6891f;
 }
 
 .category-content h3 {
@@ -3253,7 +3253,7 @@ input[type="text"]:focus {
 
 .category-content .btn.v3 {
     background: #fff;
-    color: #6449e7 !important;
+    color: #f6891f !important;
 }
 
 .category-content .btn.v3:hover {
@@ -3401,7 +3401,7 @@ input[type="text"]:focus {
 
 .category-section.v2 .single_cat h4 {
     font-size: 18px;
-    color: #6449e7;
+    color: #f6891f;
 }
 
 .single_cat.br {
@@ -3721,7 +3721,7 @@ input[type="text"]:focus {
 }
 
 .property-item .compare-btn:hover {
-    background: #6449E7;
+    background: #f6891f;
 }
 
 .property-item img {
@@ -3775,7 +3775,7 @@ input[type="text"]:focus {
 }
 
 .property-location i {
-    color: #6449e7;
+    color: #f6891f;
     position: relative;
     font-size: 20px;
     margin-right: 10px;
@@ -3844,7 +3844,7 @@ input[type="text"]:focus {
 }
 
 .feature_cb {
-    background-color: #6449e7
+    background-color: #f6891f
 }
 
 .feature_or {
@@ -3873,7 +3873,7 @@ input[type="text"]:focus {
 
 .feature-text_two {
     right: 27%;
-    background: #6449E7;
+    background: #f6891f;
 }
 
 #list-view .feature-text_one {
@@ -3947,7 +3947,7 @@ input[type="text"]:focus {
     height: 6px !important;
     border-radius: 50px;
     opacity: 1;
-    background: #6449E7 !important;
+    background: #f6891f !important;
     top: 0;
 }
 
@@ -3957,10 +3957,10 @@ input[type="text"]:focus {
     height: 6px;
     display: inline-block;
     border-radius: 10px;
-    background: #6449E7;
+    background: #f6891f;
     margin-right: 10px;
     transition: 0.6s;
-    border: 2px solid #6449E7;
+    border: 2px solid #f6891f;
     position: relative;
     top: 5px;
 }
@@ -4105,7 +4105,7 @@ input[type="text"]:focus {
 }
 
 .trend-open p {
-    color: #6449e7;
+    color: #f6891f;
     font-size: 20px;
     font-weight: 700;
     display: inline-block;
@@ -4353,7 +4353,7 @@ input[type="text"]:focus {
 }
 
 .filter .active a {
-    color: #6449E7;
+    color: #f6891f;
     text-decoration: none;
 }
 
@@ -4379,7 +4379,7 @@ input[type="text"]:focus {
     left: 0;
     width: 18%;
     height: 3px;
-    background: #6449e7;
+    background: #f6891f;
     content: "";
     border-radius: 50px;
 }
@@ -4404,7 +4404,7 @@ input[type="text"]:focus {
 }
 
 .promo-section.v2 .promo-content:nth-child(1) {
-    background: #6449e7;
+    background: #f6891f;
 }
 
 .promo-section.v2 .promo-content:nth-child(4) {
@@ -4683,7 +4683,7 @@ input[type="text"]:focus {
 }
 
 .hero-client-section.v2 .overlay {
-    background: #6449e7;
+    background: #f6891f;
 }
 
 .hero-client-section.v2 .section-title.v2 {
@@ -4737,7 +4737,7 @@ input[type="text"]:focus {
 }
 
 .call-to-action.consult-form .overlay {
-    background: #6449e7;
+    background: #f6891f;
 }
 
 .call-to-action .btn.v8:hover {
@@ -4793,7 +4793,7 @@ input[type="text"]:focus {
 
 .consult-form .btn.v8:hover {
     background: #fff;
-    color: #6449e7;
+    color: #f6891f;
 }
 
 /*------------------------------------------
@@ -4900,7 +4900,7 @@ input[type="text"]:focus {
 }
 
 .value-calculator-section.v2 .overlay {
-    background: #6449e7;
+    background: #f6891f;
 }
 
 .value-calculator-section.v2 .value-input-wrap input[type="text"] {
@@ -5560,7 +5560,7 @@ input[type="text"]:focus {
 }
 
 .pricing-table .pricing-content li i {
-    color: #6449E7
+    color: #f6891f
 }
 
 .price-num-item {
@@ -5625,7 +5625,7 @@ input[type="text"]:focus {
 .error-content i {
     font-size: 60px;
     display: block;
-    color: #6449E7;
+    color: #f6891f;
 }
 
 .error-content p {
@@ -5633,7 +5633,7 @@ input[type="text"]:focus {
 }
 
 .error-content a {
-    color: #6449E7;
+    color: #f6891f;
 }
 
 .error-search-container input {
@@ -5686,7 +5686,7 @@ input[type="text"]:focus {
 }
 
 .card-body span.blog-cat {
-    background: #6449E7;
+    background: #f6891f;
     color: #fff;
     padding: 3px 10px;
     border-radius: 15px;
@@ -5694,12 +5694,12 @@ input[type="text"]:focus {
 }
 
 .single-blog-item .card-title a:hover {
-    color: #6449E7;
+    color: #f6891f;
 }
 
 
 .blog-cat {
-    color: #6449e7;
+    color: #f6891f;
     line-height: 1;
     font-size: 14px;
     font-weight: 400;
@@ -5936,7 +5936,7 @@ ul.icon li::before {
 }
 
 .widget.categories ul li a:hover {
-    color: #6449e7;
+    color: #f6891f;
 }
 
 .widget.categories ul li span {
@@ -6036,7 +6036,7 @@ ul.icon li::before {
 
 .page-num li.active,
 .page-num li:hover {
-    background: #6449E7;
+    background: #f6891f;
 }
 
 .page-num li.active a,
@@ -6179,14 +6179,14 @@ ul.icon li::before {
     border: none;
     box-shadow: 0px 5px 13px rgba(167, 167, 167, 0.7);
     cursor: pointer;
-    background: #6449e7;
+    background: #f6891f;
 
 }
 
 .price-range.ui-slider-horizontal .ui-slider-range {
     top: 0;
     height: 4px;
-    background: #6449E7;
+    background: #f6891f;
 }
 
 .ui-slider-horizontal {
@@ -6388,8 +6388,8 @@ ul.icon li::before {
 
 .item-filter-list li a:hover,
 .item-filter-list li a.active {
-    color: #6449E7;
-    border: 1px solid #6449E7;
+    color: #f6891f;
+    border: 1px solid #f6891f;
     border-radius: 3px;
 }
 
@@ -6399,7 +6399,7 @@ ul.icon li::before {
 }
 
 .item-element span {
-    color: #6449E7;
+    color: #f6891f;
     font-weight: 500;
 
 }
@@ -6563,7 +6563,7 @@ ul.icon li::before {
 .filter-checkbox input[type="checkbox"]:checked+label::before {
 
     content: "\f122";
-    background-color: #6449E7;
+    background-color: #f6891f;
     border: none;
     font-family: 'Ionicons';
 
@@ -6681,7 +6681,7 @@ ul.icon li::before {
 
 .hero__form.v3 .search_btn a {
     display: block;
-    background: #6449E7;
+    background: #f6891f;
     color: #fff;
     padding: 15px 0;
     border-radius: 3px;
@@ -6703,7 +6703,7 @@ ul.icon li::before {
 
 .submit_btn.v2 {
     display: block;
-    background: #6449E7;
+    background: #f6891f;
     padding: 9px 20px;
     border-radius: 3px;
     border: 1px solid transparent;
@@ -6940,7 +6940,7 @@ ul.icon li::before {
 
 .contact-info-item i {
     font-size: 25px;
-    color: #6449e7;
+    color: #f6891f;
 }
 
 .contact-info-item h4 {
@@ -7024,7 +7024,7 @@ ul.icon li::before {
     position: absolute;
     top: 85%;
     z-index: 999;
-    background: #6449E7;
+    background: #f6891f;
     width: 35px;
     height: 35px;
     border-radius: 50%;
@@ -7256,7 +7256,7 @@ ul.icon li::before {
 }
 
 .recent-list .entry-title:hover a {
-    color: #6449e7;
+    color: #f6891f;
 }
 
 .entry-price {
@@ -7348,7 +7348,7 @@ ul.icon li::before {
 .mortgage-btn button {
 
     border: 1px solid transparent;
-    background: #6449E7;
+    background: #f6891f;
     color: #fff !important;
     display: block;
     padding: 12px 20px;
@@ -7366,7 +7366,7 @@ ul.icon li::before {
 }
 
 /*.value-input-wrap.newsletter button {
-    background: #6449e7;
+    background: #f6891f;
 }*/
 
 .value-input-wrap.newsletter button:focus {
@@ -7484,7 +7484,7 @@ ul.icon li::before {
 }
 
 .single-listing-title p i {
-    color: #6449e7;
+    color: #f6891f;
     font-size: 16px;
 }
 
@@ -7570,7 +7570,7 @@ ul.icon li::before {
 
 .single-agency_next:hover,
 .single-agency_prev:hover {
-    background-color: #6449e7;
+    background-color: #f6891f;
 }
 
 .single-agency_prev i,
@@ -7664,7 +7664,7 @@ ul.icon li::before {
 .location-info {
     position: absolute;
     right: 72px;
-    background: #6449e7;
+    background: #f6891f;
     height: 100%;
     bottom: 0;
     top: 0;
@@ -7897,7 +7897,7 @@ td.uncheck i {
 .single-property-prev {
     width: 40px;
     height: 40px;
-    background: #6449e7;
+    background: #f6891f;
     text-align: center;
     border-radius: 50%;
     cursor: pointer;
@@ -7933,7 +7933,7 @@ td.uncheck i {
 .single-property_next {
     position: absolute;
     left: 37.4%;
-    background: #6449e7;
+    background: #f6891f;
     width: 40px;
     height: 40px;
     z-index: 99;
@@ -8138,7 +8138,7 @@ td.uncheck i {
     width: 0;
     height: 1px;
     content: "";
-    background: #6449E7;
+    background: #f6891f;
     visibility: hidden;
     opacity: 0;
     transition: 0.5s;
@@ -8153,7 +8153,7 @@ td.uncheck i {
 }
 
 .list-details-tab .nav-item.active a {
-    color: #6449E7;
+    color: #f6891f;
 }
 
 .list-details-tab .nav-item a {
@@ -8211,7 +8211,7 @@ td.uncheck i {
 .book-btn a {
     display: block;
     padding: 13px 0;
-    background: #6449E7;
+    background: #f6891f;
     color: #fff !important;
     font-size: 18px;
     font-weight: 500;
@@ -8267,7 +8267,7 @@ td.uncheck i {
 
 .similar-item .customer-review p i {
     margin-right: 5px;
-    color: #6449E7;
+    color: #f6891f;
 }
 
 .similar-item .customer-review .product-rating li {
@@ -8646,7 +8646,7 @@ a.popup-yt i {
 }
 
 .amt-total span {
-    color: #6449E7;
+    color: #f6891f;
     font-weight: 600;
     font-size: 18px;
 }
@@ -8677,7 +8677,7 @@ a.popup-yt i {
 .address>span {
     font-size: 18px;
     float: left;
-    color: #6449E7;
+    color: #f6891f;
 }
 
 .address p {
@@ -8778,7 +8778,7 @@ a.popup-yt i {
 }
 
 .booking .submit-btn {
-    background: #6449E7;
+    background: #f6891f;
     color: #ffff;
     width: 100%;
 }
@@ -8797,7 +8797,7 @@ a.popup-yt i {
 
 .inline-facts h6 span {
     font-weight: 600;
-    color: #6449E7;
+    color: #f6891f;
 }
 
 .list-single-facts ul {
@@ -8816,7 +8816,7 @@ a.popup-yt i {
 
 .list-single-facts .inline-facts i {
     font-size: 34px;
-    color: #6449E7;
+    color: #f6891f;
 }
 
 .listing-address,
@@ -8835,7 +8835,7 @@ a.popup-yt i {
     font-size: 15px;
     margin-top: 5px;
     line-height: 1;
-    color: #6449e7;
+    color: #f6891f;
 }
 
 .location-map:hover {
@@ -8878,7 +8878,7 @@ ul.listing-features {
     position: absolute;
     left: 0;
     top: 7px;
-    color: #6449e7;
+    color: #f6891f;
     font-size: 15px;
     opacity: 0.7;
 }
@@ -9007,7 +9007,7 @@ ul.listing-features {
 .feature-left p span {
 
     font-weight: 500;
-    color: #6449E7;
+    color: #f6891f;
 
 }
 
@@ -9044,7 +9044,7 @@ ul.listing-features {
 }
 
 .price-amt {
-    color: #6449E7;
+    color: #f6891f;
     font-size: 18px;
     font-weight: 500;
     margin-bottom: 5px;
@@ -9068,7 +9068,7 @@ ul.listing-features {
 }
 
 .facilities-list li i {
-    color: #6449E7;
+    color: #f6891f;
     font-size: 18px;
     opacity: 0.6;
 }
@@ -9095,7 +9095,7 @@ ul.listing-features {
     visibility: hidden;
     opacity: 0;
     border-radius: 4px;
-    background: #6449E7;
+    background: #f6891f;
     transition: 0.3s;
     text-align: center;
 }
@@ -9397,13 +9397,13 @@ a.rate-review i {
 }
 
 a.rate-review:hover {
-    border-color: #6449E7;
-    color: #6449E7;
+    border-color: #f6891f;
+    color: #f6891f;
 }
 
 a.rate-review:hover i {
 
-    color: #6449E7;
+    color: #f6891f;
 }
 
 .contact-form {
@@ -9685,7 +9685,7 @@ a.rate-review:hover i {
 
 .coupon_code {
 
-    background: #6449E7;
+    background: #f6891f;
     color: #fff;
     border: 1px solid transparent !important;
     cursor: pointer;
@@ -9791,7 +9791,7 @@ a.rate-review:hover i {
 }
 
 .business-title h6 i {
-    color: #6449E7;
+    color: #f6891f;
 }
 
 .business-title span {
@@ -9861,8 +9861,8 @@ ul.business-hours li span {
 }
 
 .list-tags .btn.v2:hover {
-    color: #6449e7 !important;
-    border-color: #6449e7;
+    color: #f6891f !important;
+    border-color: #f6891f;
 }
 
 /*---------------------------------
@@ -9902,7 +9902,7 @@ ul.business-hours li span {
 }
 
 .user-login-section .nav-tabs .nav-link.active {
-    color: #6449E7;
+    color: #f6891f;
     text-transform: uppercase;
     color: black;
     font-weight: bold;
@@ -10040,7 +10040,7 @@ label.fix_spacing {
 
 .add_list_content h4 i {
     margin-right: 5px;
-    color: #6449E7;
+    color: #f6891f;
 
 }
 
@@ -10068,7 +10068,7 @@ label.fix_spacing {
 }
 
 .res-box label a {
-    color: #6449E7;
+    color: #f6891f;
 }
 
 .res-box label {
@@ -10105,7 +10105,7 @@ label.fix_spacing {
 
 .boxed-widget h3 i {
     margin-right: 10px;
-    color: #6449E7;
+    color: #f6891f;
 }
 
 .boxed-widget ul {
@@ -10132,7 +10132,7 @@ label.fix_spacing {
 
 .total_cost span {
     font-size: 18px;
-    color: #6449E7;
+    color: #f6891f;
     font-weight: 500;
 }
 
@@ -10301,7 +10301,7 @@ input[type="radio"] {
 }
 
 .user-follow.text-right p span {
-    color: #6449E7;
+    color: #f6891f;
     font-weight: 600;
 }
 
@@ -10326,7 +10326,7 @@ input[type="radio"] {
 }
 
 .user-follow li span {
-    color: #6449E7;
+    color: #f6891f;
     font-weight: 600;
 }
 
@@ -10409,7 +10409,7 @@ input[type="radio"] {
 }
 
 .single-team-member.v1 .single-team-info {
-    background-color: #6449E7;
+    background-color: #f6891f;
     padding: 30px 15px;
     position: absolute;
     bottom: -100%;
@@ -10579,7 +10579,7 @@ input[type="radio"] {
     font-size: 12px;
     padding-right: 5px;
     width: 20px;
-    color: #6449e7;
+    color: #f6891f;
 }
 
 .single-team-member.v2 .contact-info .text,
@@ -10683,7 +10683,7 @@ input[type="radio"] {
     z-index: 999;
     width: 55px;
     height: 55px;
-    background: #6449e7;
+    background: #f6891f;
     text-align: center;
 }
 
@@ -10693,7 +10693,7 @@ input[type="radio"] {
 }
 
 .chat-popup img {
-    border: 5px solid #6449E7;
+    border: 5px solid #f6891f;
     border-radius: 50%;
 }
 
@@ -10780,7 +10780,7 @@ input[type="radio"] {
 }
 
 .agent-chat-info li a {
-    color: #6449E7;
+    color: #f6891f;
     font-weight: 500;
 }
 
@@ -10920,7 +10920,7 @@ input[type="radio"] {
     height: 35px;
     border: 1px solid transparent;
     border-radius: 50%;
-    background: #6449E7;
+    background: #f6891f;
     text-align: center;
     margin-right: 5px;
     transition: 0.5s;
@@ -11023,7 +11023,7 @@ input[type="radio"] {
 }
 
 .switcher-button i {
-    color: #6449E7;
+    color: #f6891f;
 }
 
 .red-theme {
@@ -11047,7 +11047,7 @@ input[type="radio"] {
 }
 
 .purple-theme {
-    background-color: #6449E7;
+    background-color: #f6891f;
 }
 
 .violet-theme {
@@ -11055,7 +11055,7 @@ input[type="radio"] {
 }
 
 .aqua-theme {
-    background-color: #6449E7;
+    background-color: #f6891f;
 }
 
 .switcher-button i:before {
@@ -11313,7 +11313,7 @@ span.infobox_rate {
 
 .cluster-visible {
     background-image: none !important;
-    background-color: #6449E7;
+    background-color: #f6891f;
     border-radius: 50%;
     color: #fff !important;
     height: 50px !important;
@@ -14310,7 +14310,7 @@ span.infobox_rate {
 }
 #user-login-popup  .modal-content{
     border-radius: 0px !important;
-    border-top: 10px solid #6449e7;
+    border-top: 10px solid #f6891f;
     margin: 0px !important;
     border: none;
     border-top: 3px solid #f6891f;
@@ -14930,7 +14930,7 @@ transition: .6s;
   }
 
   .navbar-brand img{
-    height: 55px;
+    /* height: 55px; */
   }
   .z-index-1{
     z-index: 1 !important;
